<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@drawable/portrait2"
    android:id="@+id/main_home"
    tools:context=".Home">

    <!-- Button Layout with Margin -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="379dp"

        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- First Row of Buttons with Padding -->

        <!-- Second Row of Buttons with Padding -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Food Button with Padding -->
            <ImageButton
                android:id="@+id/foodButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:padding="16dp"
                android:src="@mipmap/ic_food_foreground" />

            <!-- Electronics Button with Padding -->
            <ImageButton
                android:id="@+id/electronicsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@drawable/button_background"
                android:padding="16dp"
                android:src="@mipmap/ic_tech_foreground" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <!-- Medical Button with Padding -->
            <ImageButton
                android:id="@+id/medicalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:padding="16dp"
                android:src="@mipmap/ic_medicine_foreground" />

            <!-- Other Button with Padding -->
            <ImageButton
                android:id="@+id/otherButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@drawable/button_background"
                android:padding="16dp"
                android:src="@mipmap/ic_other_foreground" />

        </LinearLayout>
    </LinearLayout>

    <!-- Search Bar -->
    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/search_bar_background"
        android:hint="@string/search_hint"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/ceramic"
        android:textSize="16sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_cart"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/logo_saturated"
        android:src="@drawable/ic_cart_foreground" />

</RelativeLayout>
