<!--
    Authors:
        - Illia M. Popov | ID: n01421791 | Section B
        - William Margalik | ID: n01479878 | Section B
        - Dylan Ashton | ID: n01442206 | Section B
        - Ahmad Aljawish | ID: n01375348 | Section B
-->

<resources>
    <!-- App Information -->
    <string name="default_web_client_id">158343388699-2hte71l6b7mjtu9dlrgsi6muko9nf26p.apps.googleusercontent.com</string>
    <string name="app_name">PetasosExpress</string>
    <string name="app_describe">Effortless, autonomous deliveries at your fingertips.</string>

    <!-- Navigation -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sensors">Track your delivery</string>
    <string name="home">Home</string>
    <string name="gps_sensor">Delivery Location</string>
    <string name="distance_sensor">Distance Sensor</string>
    <string name="proximity_sensor">Proximity Sensor</string>
    <string name="balance_sensor">Balance Sensor</string>
    <string name="motors_sensors">Motors Sensors</string>

    <!-- Dialogs and Alerts -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="alert_exit">Do you want to exit the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- User and Authentication -->
    <string name="user_pfp">User Profile</string>
    <string name="welcome_message">Welcome to PetasosExpress</string>
    <string name="login">Login</string>
    <string name="loginGoogle">Login with Google</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_gmail_address">Enter your Gmail address</string>
    <string name="gmail">Gmail</string>
    <string name="searching_for">Searching for: %1$s</string>
    <string name="location"> location </string>
    <string name="authentication_failed">Authentication failed.</string>

    <!-- Delivery and Ordering -->
    <string name="delivery_robot">Delivery Robot</string>
    <string name="place_order">Search</string>
    <string name="search_hint">Search for products</string>
    <string name="home_question1">What order do you need today?</string>
    <string name="_4cm">4cm</string>
    <string name="home_tag">home</string>
    <string name="gps_tag">gps</string>
    <string name="distance_tag">distance</string>
    <string name="proximity_tag">proximity</string>
    <string name="balance_tag">balance</string>
    <string name="motors_tag">motors</string>
    <string name="settings_tag">settings</string>
    <string name="tel_1234567890">tel:1234567890</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="ManageAccount" />
    <string name="no_obstacles">No obstacles</string>
    <string name="delivery_robot_monitor">Delivery Robot Monitor</string>
    <string name="food_1">food</string>
    <string name="technology_1">technology</string>
    <string name="medicine">medicine</string>
    <string name="other">other</string>

    <!-- Status and Information -->
    <string name="status_warning">Status: Warning</string>
    <string name="set_proximity_threshold">Set Proximity Threshold</string>
    <string name="status">status:</string>
    <string name="_status">Status:</string>
    <string name="motor_speed">Motor Speed:</string>
    <string name="motor_speed_value">.</string>
    <string name="motor_rpm">Motor RPM:</string>
    <string name="error_codes">Error Codes:</string>
    <string name="safety_alerts">Safety Alerts:</string>
    <string name="emergency_stop">Emergency Stop</string>
    <string name="collision_avoidance">Collision Avoidance</string>
    <string name="distance">Distance:</string>
    <string name="num_0">0</string>
    <string name="meters">Meters</string>
    <string name="speed_mode">Speed Mode:</string>

    <!-- Motors and Movement -->
    <string name="motor_speed_label">Motor Speed</string>
    <string name="motor_speed_value_placeholder">%s km/h</string>

    <!-- Units and Measurements -->
    <string name="change_units">Change Units (Meters/Feet)</string>

    <!-- History and Logs -->
    <string name="stops_history">Stops\' History:</string>

    <!-- Simulation -->
    <string name="maximum_speed">Maximum Speed</string>
    <string name="x_axis">X Axis</string>
    <string name="value_0">Value: 0</string>
    <string name="y_axis">Y Axis</string>
    <string name="z_axis">Z Axis</string>
    <string name="start_simulation">Start Simulation</string>

    <!-- App Settings -->
    <string name="Settings">Settings</string>
    <string name="AppSettings">AppSettings</string>
    <string name="help">help</string>
    <string name="app_settings">app_settings</string>
    <string name="current_fragment">current_fragment</string>
    <string name="empty_space">" "</string>
    <string name="value">"Value: "</string>
    <string name="_2f_km_h">%.2f km/h</string>

    <!-- Theme and Appearance -->
    <string name="dark_theme_switched">Switched to Dark Theme</string>
    <string name="light_theme_switched">Switched to Light Theme</string>

    <!-- Orientation -->
    <string name="landscape_orientation">Landscape</string>
    <string name="portrait_orientation">Portrait</string>

    <!-- Registration and Account -->
    <string name="registration_successful">Registration successful.</string>
    <string name="registration_failed_please_try_again">Registration failed. Please try again.</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="orientation">Orientation</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="cities">Cities</string>
    <string name="notifications">Notifications</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="register">Register</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_email_address">Enter your Email address</string>
    <string name="email">Email</string>
    <string name="theme">Theme</string>
    <string name="registration_in_process">Registration in process…</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_out">sign out</string>
    <string name="no_data">No Data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="all_fields_filled">All fields must be filled.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="server_error">Server Error</string>
    <string name="placeholder">Value: %1$d</string>
    <string name="rpm_value_placeholder">RPM: %1$s</string>
    <string name="feedback">Feedback</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="comment_hint">Comment</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="proximity_value_is_smaller_than_the_threshold">Proximity value is smaller than the threshold.</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="feedback_submitted_successfully">Feedback submitted successfully!</string>
    <string name="failed_to_submit_feedback">Failed to submit feedback</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="invalid_email_format">Please enter a valid email address.</string>
    <string name="invalid_password_format1">Password must be at least 6 characters,</string>
    <string name="invalid_password_format2">include a number, a capital letter, and a special character.</string>
    <string name="email_already_in_use">This email is already in use</string>
    <string name="searching_for_category" translatable="false">Searching for items in category: %s</string>
    <string name="account_settings">Account Settings</string>
    <string name="please_fill_the_name_field">Please fill the name field</string>
    <string name="please_leave_a_comment">Please leave a comment</string>
    <string name="rating_must_be_between_1_0_and_5_0">Rating must be between 1.0 and 5.0</string>

    <!-- Shopping Cart and Payment -->
    <string name="save_changes">Save Changes</string>
    <string name="invalid_phone_format">Invalid phone format</string>
    <string name="submit">Submit</string>
    <string name="pay">Pay</string>
    <string name="contact_information">Contact Information:</string>
    <string name="cvv">CVV</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_number">Card Number</string>
    <string name="amount">$00.00</string>
    <string name="payment_amount">Payment Amount:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity:</string>
    <string name="producer">Producer</string>
    <string name="minus">-</string>
    <string name="minus_long">—</string>
    <string name="number">0</string>
    <string name="plus">+</string>
    <string name="shopping">Shopping</string>
    <string name="cart">Cart</string>
    <string name="petasos_cart">Your Petasos Cart</string>
    <string name="add_to_your_cart">Add to your Cart</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="total_amount">Total Amount:</string>
    <string name="remove">Remove</string>
    <string name="address">Address:</string>
    <string name="credit_card_number_must_be_16_digits">Credit card number must be 16 digits</string>
    <string name="cvv_must_be_3_digits">CVV must be 3 digits</string>
    <string name="card_holder_name_is_required">Card holder name is required</string>
    <string name="address_must_be_filled">Address is required</string>
    <string name="name_as_it_is_written_on_the_card">Name as it is written on the card</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="please_select_an_expiration_month">Please select an expiration month</string>
    <string name="please_select_an_expiration_year">Please select an expiration year</string>
    <string name="order_created_successfully">Order created successfully.</string>
    <string name="error_creating_order">Error creating order.</string>

    <!-- Date and Time -->
    <string-array name="months">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="year_array">
        <item>Year</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>

    <!-- Order Queue and Alerts -->
    </string-array>
    <string name="queue_alert_title">Order in Queue</string>
    <string name="queue_alert_message">We\'re experiencing an unusual amount of orders right now. Your order is in a queue and a delivery robot will be assigned to it as soon as possible.</string>
    <string name="no_order_alert_title">There is no order to track</string>
    <string name="no_order_alert_message">There is no order on your name, so no delivery robot is assigned to it. All sensor readings are in their default state.</string>
    <string name="ok">OK</string>
    <string name="cart_empty_message">Your cart is empty. Add items to proceed to checkout.</string>

    <!-- Constants -->
    <string name="min_distance_threshold">0.2</string>
    <string name="max_distance_threshold">4.0</string>
    <string name="default_address">Default address</string>
    <string name="email_field_is_empty">Email field is empty</string>
    <string name="password_field_is_empty">Password field is empty</string>
    <string name="test">Test</string>
    <string name="moving_forward">Moving the robot forward</string>


</resources>