...
        android:paddingBottom="12dp"
        android:textColor="@color/ceramic"
        android:textSize="16sp" />

    <!-- ListView for search results -->
    <ListView
        android:id="@+id/search_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchEditText"
        android:layout_marginTop="11dp"
        android:background="@drawable/search_bar_background"
        android:textColor="@color/ceramic"
...
