...
        android:textColor="@color/wine"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <!-- Cart Items List -->
    <ListView
        android:id="@+id/cart_items_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:divider="@color/greek"
        android:dividerHeight="8dp"
        android:padding="10dp" />
...
